Author: Matthew Good <trac@matt-good.net>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

acct_mgr-0.5 (not yet released) - branch 0.11
 resolved issues
 * #10681: User with empty password can't reset their password
 * prevent two ways for a user to bypass a forced password change
 * skip BotTrapCheck on admin user requests, i.e. from inside user admin panel

 new features
 * add unit tests for db access functions
 * add account guard configuration to config admin panel
 * allow logging-in into password-less accounts via acct_mgr.LoginModule


acct_mgr-0.4.2 (27-Dec-2012) - branch 0.11
 resolved issues
 * #10730: AccountGuard.lock_time effectively disables account locking


acct_mgr-0.4.1 (26-Dec-2012) - branch 0.11
 resolved issues
 * #5964: Prevent multiple calls to LoginModule._remote_user()
   by re-using a flag introduced for account locking
 * #8545: Authentication always fails
   by introducing authentication attempt debug logging and a new option
   'environ_auth_overwrite' for additional control over REMOTE_USER's value
 * #10134: HttpAuth login throws traceback
 * #10625: AssertionError in trac.db.pool.PooledConnection.__del__
 * #10700: AccountModule._do_reset_password discards error from _reset_password
 * #10701: Reset password reports `Cannot find ... "IPasswordHashMethod"`
 * several fixes for unreported account guard issues


acct_mgr-0.4 (01-Dec-2012) - branch 0.11
 resolved issues
 * #3459: Authentication information not available
 * #4677: Admin based chaining HtDigestStore & HtPasswdStore breaks config
   by adding dedicated options 'htdigest_file' and 'htpasswd_file'
 * #5691: No cookie warning shown when trying to log in with Konqueror
 * #6616: Invalid entries for usernames in table
   by adding a cleaner macro implementation outside of `UserStatsMacro`
 * #8685: User deletion ordering breaks 'deleted' notification for SessionStore
 * #8770: AttributeError: Cannot find implementation of "IPasswordHashMethod"